--- a/react-notes-manager-002-router-setup/vercel.json
+++ b/react-notes-manager-002-router-setup/vercel.json
@@ -1,6 +1,16 @@
 {
-    "rewrites": [
-      { "source": "/api/:path*", "destination": "/api/:path*" }
-    ]
-  }
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ],
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" },
+    { "src": "package.json", "use": "@vercel/static-build" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/server.js" }
+  ]
+}
   
